--- a/.github/workflows/woldometers_scraping.yml
+++ b/.github/workflows/woldometers_scraping.yml
@@ -19,6 +19,9 @@ jobs:
         uses: actions/setup-python@v2.0.0
         with:
           python-version: '3.7'
+      - name: Upgrade pip
+        run: |
+          python -m pip install --upgrade pip
       - name: Install requirements
         run: pip install -r requirements.txt
       - name: Run Scraper
