--- a/.github/workflows/woldometers_scraping.yml
+++ b/.github/workflows/woldometers_scraping.yml
@@ -23,4 +23,6 @@ jobs:
         run: |
           python -m pip install --upgrade pip
       - name: Run Scraper
-        run: python woldometres_scraping.py
+        run: |
+          python -m pip install -r .github/workflows/requirements.txt 
+          python woldometres_scraping.py
