--- a/.github/workflows/woldometers_scraping.yml
+++ b/.github/workflows/woldometers_scraping.yml
@@ -13,15 +13,17 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repo
-        uses: actions/checkout@v2
-      - name: Set up Python
-        uses: actions/setup-python@v2.0.0
-        with:
-          python-version: '3.7'
       - name: Upgrade pip
         run: |
           python -m pip install --upgrade pip
+
+      - name: Checkout repository
+        uses: actions/checkout@v4 # Use the latest version compatible
+
+      - name: Set up Python
+        uses: actions/setup-python@v4 # Use the latest version compatible
+        with:
+          python-version: 3.8
       - name: Run Scraper
         run: |
           python -m pip install -r .github/workflows/requirements.txt 
