--- a/.github/workflows/woldometers_scraping.yml
+++ b/.github/workflows/woldometers_scraping.yml
@@ -30,6 +30,6 @@ jobs:
           python woldometres_scraping.py
       - name : Git automatic push 
         run:
-         git add * 
+         git add -A 
          git commit -m "dataset update"
          git push
